--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
             <img src="./images/mapofmiddleearth.jpeg" width="900" height="450" alt="Map of Middle Earth">
             <p><h1>Recipies of Middle Earth</h1></p>
             
-            <p><h3>Lambas Bread</h3></p>
+            <p>
+                <a href="./lembas.html"><h3>Lambas Bread</h3></a>
+            </p>
             <p><img src="./images/lembasbread.jpg" width="466" alt="This is a picture of lembas the Elvish way bread"></p>
             
-            <p><h3>Uruk-Hai Grub</h3></p>
+            <p>
+                <a href="./uruk.html"><h3>Uruk-Hai Grub</h3></a>
+            </p>
             <p><img src="./images/maggotybread.jpg" width="466" alt="This is a picture of maggoty bread"></p>
 
-            <p><h3>Rabbit Stew</h3></p>
+            <p>
+                <a href="./coneys.html"><h3>Rabbit Stew</h3></a>
+            </p>
             <p><img src="./images/braceofconeys.jpg" width="466" alt="Rabbit stew"></p>
         </body>
     </html>
