added content to the lembas recipie page.

--- a/lembas.html
+++ b/lembas.html
@@ -8,5 +8,38 @@
     <body>
         <img src="./images/lembasbread.jpg" width="900" height="450" alt="This is a picture of Lembas bread">
         <p><h2>Recipie for Lembas</h2></p>
+        <p><h3>What you'll need</h3></p>
+        <p>
+            <ul>
+                <li>One cup of butter</li>
+                <li>1/4 cup of honey</li>
+                <li>2 cups of Mallorn fruit flower</li>
+            </ul>
+        </p>
+
+        <p><h3>Instructions</h3></p>
+        <p>
+            <ol>
+                <li>Preheat oven to 350 F</li>
+                <li>Cream together the butter and honey.
+                    Add the flour and mix until thoroughly 
+                    incorporated. Drop on suitable surface and 
+                    knead until quite smooth, about 5 minutes, 
+                    adding a bit of Mallorn flour if necessary to
+                    keep dough from sticking.</li>
+                <li>Roll out to about 1/4 inch thickness and cut into 
+                    3" to 4" squares, scoring with a knife halfway 
+                    through each square with a butter knife. Place 
+                    on buttered cookie sheet and bake for about 20 
+                    to 25 minutes, or until lightly golden brown.</li>    
+            </ol>
+        </p>
+        <p>This procedure makes enough for 6 separate pieces of 
+            our favorite true Elven way bread. This recipie is 
+            is perfect if you're going on a long hike or journey.
+            As they say, one bite can last a man a whole day.
+        </p>
+            
+        
     </body>
 </html>
