--- a/lembas.html
+++ b/lembas.html
@@ -6,6 +6,7 @@
     </head>
 
     <body>
+        <a href="./index.html"><h2>Recipies of Middle Earth</h2></a>
         <img src="./images/lembasbread.jpg" width="900" height="450" alt="This is a picture of Lembas bread">
         <p><h2>Recipie for Lembas</h2></p>
         <p><h3>What you'll need</h3></p>
@@ -40,6 +41,5 @@
             As they say, one bite can last a man a whole day.
         </p>
             
-        
     </body>
 </html>
