filled out content and added return home link.

--- a/uruk.html
+++ b/uruk.html
@@ -6,8 +6,40 @@
     </head>
 
     <body>
+        <a href="index.html"><h2>Recipies of Middle Earth</h2></a>
         <img src="./images/maggotybread.jpg" width="900" height="450" alt="This is a picture of maggoty breaf">
         <p><h2>Uruk-Hai Grub</h2></p>
+        <p><h3>What you'll need</h3></p>
+        <p>
+            <ul>
+                <li>2 Cups of flour</li>
+                <li>3/4 Cups of water</li>
+                <li>1 1/2 Teaspoons of salt</li>
+            </ul>
+        </p>
+        <p><h3>Instructions</h3></p>
+        <p>
+            <ol>
+                <li>Preheat oven to 375 F</li>
+                <li>Mix the flour, water and salt together in a large
+                    bowl.</li>
+                <li>Use a roller to flatten the dough out to a 
+                    thickness of 1/2 inch</li>
+                <li>Cut dough into 3 inch squares and place on a 
+                    baking sheet</li>
+                <li>Put baking sheet in the oven for half an hour. Then 
+                    flip the individual pieces and cook for another half hour.
+                </li> 
+                <li>Once cooked have a troop of sweatty Uruk-Hai carry 
+                    the bread for one month through the mountians.
+                </li>       
+                    
+            </ol>
+        </p>
+        <p>It's not the tastiest nor the healthiest bread you can make, 
+            but it will hold you over at least until meat is back on the menu
+            for you and your boys.
+        </p>
     </body>
 
 </html>
