Added content to the coneys page.

--- a/coneys.html
+++ b/coneys.html
@@ -1,13 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Brace of Coneys</title>
+        <title>Rabbit stew</title>
         <meta charset="utf-8">
     </head>
 
     <body>
+        <a href="./index.html">Recipies of Middle Earth</a>
         <img src="./images/braceofconeys.jpg" width="900" height="450" alt="This is some rabbit stew">
         <p><h2>Rabbit Stew</h2></p>
+        <p><h3>What You'll Need</h3></p>
+
+        <p>
+            <ul>
+                <li>A brace of coneys</li>
+                <li>2 sticks of celery, sliced</li>
+                <li>3 Tbsp cornflour</li>
+                <li>1.5 Tbsp butter </li>
+                <li>1 medium onion, sliced</li>
+                <li>1 bay leaf</li>
+                <li>2 cups of water</li>
+                <li>2 cups of red wine</li>
+                <li>2 carrots</li>
+                <li><strong>*Important*</strong>4 taters<strong>*Important*</strong></li>
+            </ul>
+        </p>
+        <p><h3>Instructions</h3></p>
+            
+        <p>
+            <ol>
+                <li>Dice the meat that you harvested, and coat with cornflower.
+                    Shake of any excess
+                </li>
+                <li> Melt the butter in a pot, then brown 
+                    the meat. Add the celery, onion and bay leaf – season 
+                    with salt& pepper, then pour in the water and wine. 
+                    Bring to a boil, put a lid on, and gently simmer at 
+                    the lowest setting for 2 hours.</li>
+                <li>Meanwhile,  and dice the taters & carrots. Add these to the stew for the 
+                    during last 25-30 minutes of the cooking time</li>  
+                <li> When the vegetables are cooked through and the 
+                    sauce is thick, the stew is ready to serve.</li>      
+            </ol>
+        </p>
+        <p>This stew is best served with a sourdoug loaf and 
+            a cup of your favorite mead. And remember, there is only
+            <em>one</em> way to serve up a brace of coneys.
+        </p>
     </body>
 
 </html>
