fixed formatting of the return home link.

--- a/coneys.html
+++ b/coneys.html
@@ -7,7 +7,7 @@
 
     <body>
         <a href="./index.html">Recipies of Middle Earth</a>
-        <img src="./images/braceofconeys.jpg" width="900" height="450" alt="This is some rabbit stew">
+        <p><img src="./images/braceofconeys.jpg" width="900" height="450" alt="This is some rabbit stew"></p>
         <p><h2>Rabbit Stew</h2></p>
         <p><h3>What You'll Need</h3></p>
 
