Grammer fix in last paragraph.

--- a/uruk.html
+++ b/uruk.html
@@ -37,7 +37,7 @@
             </ol>
         </p>
         <p>It's not the tastiest nor the healthiest bread you can make, 
-            but it will hold you over at least until meat is back on the menu
+            but it will hold you over until meat is back on the menu
             for you and your boys.
         </p>
     </body>
