added some css features and buttons across the top of each page

--- a/coneys.html
+++ b/coneys.html
@@ -3,13 +3,16 @@
     <head>
         <title>Rabbit stew</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css"
     </head>
 
     <body>
-        <a href="./index.html">Recipies of Middle Earth</a>
+        <a href="./index.html"><button class="blink"> Recipies of Middle Earth</button></a>
+        <a href="./lembas.html"><button class="blink">Lembas Bread</button></a>
+        <a href="./uruk.html"><button class="blink"> Urik-Hai Grub </button></a>
         <p><img src="./images/braceofconeys.jpg" width="900" height="450" alt="This is some rabbit stew"></p>
-        <p><h2>Rabbit Stew</h2></p>
-        <p><h3>What You'll Need</h3></p>
+        <p><h2 class="subheading">Rabbit Stew</h2></p>
+        <p><h3 class="subheading1">What You'll Need</h3></p>
 
         <p>
             <ul>
@@ -25,7 +28,7 @@
                 <li><strong>*Important*</strong>4 taters<strong>*Important*</strong></li>
             </ul>
         </p>
-        <p><h3>Instructions</h3></p>
+        <p><h3 class="subheading1">Instructions</h3></p>
             
         <p>
             <ol>
