--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
         <head>
             <title>Recipies of Middle Earth</title>
             <meta charset="utf-8">
+            <link rel="stylesheet" href="style.css">
         </head>
 
         <body>
             <img src="./images/mapofmiddleearth.jpeg" width="900" height="450" alt="Map of Middle Earth">
-            <p><h1>Recipies of Middle Earth</h1></p>
+            <p><h1 class="heading">Recipies of Middle Earth</h1></p>
             
             <p>
-                <a href="./lembas.html"><h3>Lambas Bread</h3></a>
+                <a href="./lembas.html"><button class="headingsmall">Lambas Bread </button></a>
             </p>
             <p><img src="./images/lembasbread.jpg" width="466" alt="This is a picture of lembas the Elvish way bread"></p>
             
             <p>
-                <a href="./uruk.html"><h3>Uruk-Hai Grub</h3></a>
+                <a href="./uruk.html"><button class="headingsmall">Uruk-Hai Grub </button></a>
             </p>
             <p><img src="./images/maggotybread.jpg" width="466" alt="This is a picture of maggoty bread"></p>
 
             <p>
-                <a href="./coneys.html"><h3>Rabbit Stew</h3></a>
+                <a href="./coneys.html"><button class="headingsmall">Rabbit Stew </button></a>
             </p>
             <p><img src="./images/braceofconeys.jpg" width="466" alt="Rabbit stew"></p>
         </body>
