--- a/lembas.html
+++ b/lembas.html
@@ -3,13 +3,16 @@
     <head>
         <title>Lembas Bread</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <a href="./index.html"><h1>Recipies of Middle Earth</h1></a>
-        <img src="./images/lembasbread.jpg" width="900" height="450" alt="This is a picture of Lembas bread">
-        <p><h2>Recipie for Lembas</h2></p>
-        <p><h3>What you'll need</h3></p>
+        <a href="./index.html"><button class="blink"> Recipies of Middle Earth</button></a>
+        <a href="./coneys.html"><button class="blink">Rabbit Stew</button></a>
+        <a href="./uruk.html"><button class="blink"> Urik-Hai Grub </button></a>
+        <p><img src="./images/lembasbread.jpg" width="900" height="450" alt="This is a picture of Lembas bread"></p>
+        <p><h2 class="subheading">Recipie for Lembas</h2></p>
+        <p><h3 class="subheading1">What you'll need</h3></p>
         <p><ul>
                 <li>One cup of butter</li>
                 <li>1/4 cup of honey</li>
@@ -17,7 +20,7 @@
             </ul></p>
         
 
-        <p><h3>Instructions</h3></p>
+        <p><h3 class="subheading1">Instructions</h3></p>
         <p><ol>
                 <li>Preheat oven to 350 F</li>
                 <li>Cream together the butter and honey.
