--- a/uruk.html
+++ b/uruk.html
@@ -3,13 +3,16 @@
     <head>
         <title>Uruk-Hai Grub</title>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <a href="index.html"><h2>Recipies of Middle Earth</h2></a>
-        <img src="./images/maggotybread.jpg" width="900" height="450" alt="This is a picture of maggoty breaf">
-        <p><h2>Uruk-Hai Grub</h2></p>
-        <p><h3>What you'll need</h3></p>
+        <a href="./index.html"><button class="blink"> Recipies of Middle Earth</button></a>
+        <a href="./coneys.html"><button class="blink">Rabbit Stew</button></a>
+        <a href="./lembas.html"><button class="blink"> Lembas Bread </button></a>
+        <p><img src="./images/maggotybread.jpg" width="900" height="450" alt="This is a picture of maggoty bread"></p>
+        <p><h2 class="subheading">Uruk-Hai Grub</h2></p>
+        <p><h3 class="subheading1">What you'll need</h3></p>
         <p>
             <ul>
                 <li>2 Cups of flour</li>
@@ -17,7 +20,7 @@
                 <li>1 1/2 Teaspoons of salt</li>
             </ul>
         </p>
-        <p><h3>Instructions</h3></p>
+        <p><h3 class="subheading1">Instructions</h3></p>
         <p>
             <ol>
                 <li>Preheat oven to 375 F</li>
